--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,16 @@ dependencies {
 
     compileOnly('org.projectlombok:lombok')
     annotationProcessor('org.projectlombok:lombok')
+
+    compile('mysql:mysql-connector-java')
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    compile 'mysql:mysql-connector-java'
+
+    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.11.0'
+    compile group: 'com.vaadin.external.json', name: 'json', version: '0.0.20080701'
 }
 
 test {
