MeteostatController doesn't see MeteostatClient class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/wherever_i_want?serverTimezone
 spring.datasource.username=emicoder
 spring.datasource.password=emicoder_password
 
+meteostat.api.endpoint.prod= https://api.meteostat.net/v1/climate/normals
 meteostat.app.key = erPSGcB5
