--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=emicoder_password
 
 meteostat.api.endpoint.prod= https://api.meteostat.net/v1/climate/normals
 meteostat.app.key = erPSGcB5
+
+logging.level.org.apache.http=DEBUG
