--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,7 @@ spring.datasource.password=emicoder_password
 meteostat.api.endpoint.prod= https://api.meteostat.net/v1/climate/normals
 meteostat.app.key = erPSGcB5
 
+weather.api.endpoint.prod = http://api.openweathermap.org/data/2.5/weather
+weather.app.key = e1ef7e03260c95637a3eb85597f01383
+
 logging.level.org.apache.http=DEBUG
