--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,10 @@ dependencies {
 
     compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.6.0'
 
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
+    compile group: 'org.apache.commons', name: 'commons-email', version: '1.5'
+    compile 'javax.mail:mail:1.4.7'
+
 
 
 }
