--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,16 @@ meteostat.app.key = erPSGcB5
 weather.api.endpoint.prod = http://api.openweathermap.org/data/2.5/weather
 weather.app.key = e1ef7e03260c95637a3eb85597f01383
 
-logging.level.org.apache.http=DEBUG
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=kkodilla@gmail.com
+spring.mail.password=rhthblpjqlumdikr
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+
