--- a/build.gradle
+++ b/build.gradle
@@ -33,9 +33,11 @@ dependencies {
     compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.6.0'
 
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
-    compile group: 'org.apache.commons', name: 'commons-email', version: '1.5'
-    compile 'javax.mail:mail:1.4.7'
+    
+    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.3.1.RELEASE'
+    compile('org.springframework.boot:spring-boot-starter-mail:1.5.7.RELEASE')
 
 
 }
